--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,59 @@
 @import 'tailwindcss';
 
+body{
+  font-family: 'Mulish', sans-serif;
+}
+
 .btn{
   @apply text-white font-bold cursor-pointer border px-5 py-1 rounded-full hover:bg-white hover:text-[rgb(28,68,120)] duration-200
 }
 
+/* ---------------------------------------------------------- */
+/* Student Login Page */
+
 .studentLogin{
   @apply bg-blue-200;
   height: 100vh;
+  display: grid;
+  place-items: center;
+  padding: 7%
 }
+
+.loginContainer{
+  @apply bg-white;
+  height: 100%;
+  width: 100%;
+  border-radius: 15px;
+  box-shadow: 0px 0px 5px 1px gray;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.pictureContainer{
+  display: grid;
+  place-items: center;
+}
+
+.stuLogCont{
+  display: grid;
+  place-items: center;
+}
+
+.stuLogForm{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.stuLogForm h1{
+  @apply font-bold text-[25px];
+  margin: 0px 50px
+}
+
+.textInput{
+  @apply border border-gray-500;
+  padding: 10px 15px;
+  font-size: 14px;
+}
+
+/* ---------------------------------------------------------- */
